[package]
name = "chrono-systemd-time-ng"
version = "0.3.0"
authors = [
  "Josh Resch <joshresch.cpp@gmail.com>",
  "Collide <three-dim-sky@foxmail.com>",
]
edition = "2021"
description = "Library which parses systemd.time style timestamps into chrono types"
documentation = "https://docs.rs/chrono-systemd-time-ng/"
homepage = "https://github.com/TD-Sky/chrono-systemd-time-ng"
repository = "https://github.com/TD-Sky/chrono-systemd-time-ng"
keywords = ["chrono", "date", "time", "systemd"]
categories = ["date-and-time"]
readme = "README.md"
license = "MIT/Apache-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md"]

[lib]
name = "chrono_systemd_time"

[dependencies]
chrono = "0.4"
once_cell = "1.18"
